--- a/vignettes/derivative_quantities.Rmd
+++ b/vignettes/derivative_quantities.Rmd
@@ -19,7 +19,6 @@ collapse = TRUE,
 comment = "#>"
 )
 ```
-
 Studies utilizing environmental sampling for disease surveillance often employ Quantitative Real-Time Polymerase Chain Reaction (qPCR) to detect pathogens in samples. In qPCR, the measurement is given as the cycle threshold (Ct) value, which is the number of PCR cycles required for the fluorescent signal to exceed a predefined threshold, indicating the presence of the pathogen's target nucleic acid (see [Thermo Fisher's qPCR basics](https://www.thermofisher.com/us/en/home/life-science/pcr/real-time-pcr/real-time-pcr-learning-center/real-time-pcr-basics.html)). The Ct value is often used to determine the presence or absence of a pathogen in a sample, where the pathogen is deemed absent if amplification reaches 40 cycles with no fluorescent signal [@caraguel2011]. Although qPCR can be a powerful method for pathogen detection, the Ct value can also estimate the overall *quantity* of pathogen genetic material in a sample. However, the starting amount of target nucleic acid in a sample can be influenced by many external factors [@rabaan2021; @bustin2005] which makes the normalization of these data a challenge. To help address these challenges, we have included both an absolute and a relative quantification method in the `es` package with the following functions:
 
 1.  `calc_n_copies()` which calculates the number of gene target copies using standard curve quantification described by @pfaffl2012, and
@@ -28,19 +27,19 @@ Studies utilizing environmental sampling for disease surveillance often employ Q
 
 3. `est_amplification_efficiency()` is a method for estimating the percentile amplification efficiency of the qPCR using a standard curve assay (see @yuan2008).
 
-Our hope is that transforming the Ct value into these derivative quantities can help make environmental sampling data more interpretable and to normalize its variance in a manner that is less vulnerable to confounding. The examples below show how to calculate these quantities given that your data match the template data shown in the `template_es_data` and `template_standard_curve` objects.
+We hope that transforming the Ct value into these derivative quantities can help make environmental sampling data more interpretable and normalize its variance in a manner that is less vulnerable to confounding. The examples below show how to calculate these quantities given that your data matches the template data shown in the `template_es_data` and `template_standard_curve` objects.
 
 \
 
 ## Absolute quantification: calculating the number of target gene copies
 
-Calculating the number of target gene copies in a sample is a form of absolute quantification. While it is still susceptible to external confounders that influence the starting amount of nucleic acid and any inhibitors to amplification that might be present [@bustin2005], this a count variable that is more interpretable than raw Ct values and allows for normalization with additional covariates. To calculate the number of target gene copies, a standard curve assay is required which relates known concentrations of each gene target to their expected Ct values for the specific target, PCR machine, and reagents used [@pfaffl2012].
+Calculating the number of target gene copies in a sample is a form of absolute quantification. While it is still susceptible to external confounders that influence the starting amount of nucleic acid and any inhibitors to amplification that might be present [@bustin2005], this is a count variable that is more interpretable than raw Ct values and allows for normalization with additional covariates. To calculate the number of target gene copies, a standard curve assay is required which relates known concentrations of each gene target to their expected Ct values for the specific target, PCR machine, and reagents used [@pfaffl2012].
 
 Assuming the PCR machine's amplification efficiency is 100%, the number of gene copies is expected to double with each cycle [@ruijter2009] resulting in a logarithmic relationship between Ct values and gene copies, where the number of target gene copies decreases exponentially as the number of PCR cycles increases linearly.
 
 <center>![](../man/figures/plot_ct_n_copies.png){width="95%"}</center>
 
-Due the logarithmic relationship of PCR kinetics we use a log-linear model to relate known gene target quantities from the standard curve to the Ct values observed in the qPCR performed on our study samples:
+Due to the logarithmic relationship of PCR kinetics, we use a log-linear model to relate known gene target quantities from the standard curve to the Ct values observed in the qPCR performed on our study samples:
 
 $$
 \log(\text{number gene copies}_i) \sim \alpha + \beta_i \cdot \text{Ct value}_i + \epsilon.
@@ -48,7 +47,7 @@ $$
 
 <center>![](../man/figures/plot_n_copies.png){width="65%"}</center>
 
-The code below shows how to how to use the `calc_n_copies()` function on the `template_es_data` and `template_standard_curve` objects to calculate the number of target gene copies.
+The code below shows how to use the `calc_n_copies()` function on the `template_es_data` and `template_standard_curve` objects to calculate the number of target gene copies.
 
 ```{r, eval=FALSE}
 df <- es::template_es_data
@@ -89,7 +88,7 @@ date location_id  lat   lon target_name ct_value n_copies
 6 2020-03-07           1 23.8 90.37    target_1 32.20208 21.93164
 ```
 
-Note the prediction for the number of target gene copies shown below is convenient in that it is more interpretable that the Ct value method, however it is an absolute quantification method that may need further normalization to adjust for environmental confounders. An alternative is to use a relative quantitification method such as $\Delta \Delta \text{Ct}$ described in the following section.
+Note the prediction for the number of target gene copies shown below is convenient in that it is more interpretable than the Ct value method, however, it is an absolute quantification method that may need further normalization to adjust for environmental confounders. An alternative is to use a relative quantification method such as $\Delta \Delta \text{Ct}$ described in the following section.
 
 <center>![](../man/figures/plot_predicted_n_copies.png){width="70%"}</center>
 
@@ -113,7 +112,7 @@ $$
 \end{align}
 $$ 
 
-A major assumption of the standard method is that the amplification efficiency of the qPCR assay is 100% efficient. In practice, the efficiency of an assay is likely to be slightly less than 1, where a only a proportion of sample nucleic acids are replicated in each cycle [@stolovitzky1996], which can have a non-trivial impact on an output variable with an exponential component. Therefore, the adjusted $\Delta \Delta \text{Ct}$ method accounts for an imperfect efficiency amplification efficiency (noted as $\phi$ here). 
+A major assumption of the standard method is that the amplification efficiency of the qPCR assay is 100% efficient. In practice, the efficiency of an assay is likely to be slightly less than 1, where only a proportion of sample nucleic acids are replicated in each cycle [@stolovitzky1996], which can have a non-trivial impact on an output variable with an exponential component. Therefore, the adjusted $\Delta \Delta \text{Ct}$ method accounts for an imperfect efficiency amplification efficiency (noted as $\phi$ here). 
 
 $$
 \begin{align}
@@ -125,7 +124,7 @@ $$
 \end{align}
 $$
 
-Since environmental sampling data typically do not have a control group, we use the temporal method in the `es` package to relate all "treatment" observations at time $t$ to the "control" observations at time $t=0$; see Section 1.4 of @livak2001. Which means we can write Equation 1 above as: 
+Since environmental sampling data typically do not have a control group, we use the temporal method in the `es` package to relate all "treatment" observations at time $t$ to the "control" observations at time $t=0$; see Section 1.4 of @livak2001. This means we can write Equation 1 above as: 
 
 $$
 \begin{align}
@@ -149,7 +148,7 @@ $$
 \end{align}
 $$ 
 
-where, $\phi_{\text{target}}$ and $\phi_{\text{reference}}$ are the estimated qPCR amplification efficiency values for the target and reference genes respectively. Note that traditionally there would also be a $\phi$ value for the treatment and control groups, but since environmental sampling data do not have an explicit sample treatment we use the same $\phi$ for when time = $t$ and $t=0$.
+where $\phi_{\text{target}}$ and $\phi_{\text{reference}}$ are the estimated qPCR amplification efficiency values for the target and reference genes respectively. Note that traditionally there would also be a $\phi$ value for the treatment and control groups, but since environmental sampling data do not have an explicit sample treatment we use the same $\phi$ for when time = $t$ and $t=0$.
 
 The following code blocks show how to calculate both the standard and adjusted $\Delta \Delta \text{Ct}$ values for a simulated environmental sampling data set shown in the `template_es_data` and `template_standard_curve` data objects. To calculate the standard $\Delta \Delta \text{Ct}$ value (Equation 1) initially described in @livak2001 we assume a PCR efficiency of 1 for all targets. The following code does the calculation for a single observation.
 
@@ -163,7 +162,7 @@ calc_delta_delta_ct(ct_target_treatment = 32.5,
 [1] 0.08838835
 ```
 
-And adjusted $\Delta \Delta \text{Ct}$ (Equation 2) can be calculated by incorporating the arguments with prefix `pae_*` for percentile amplification efficiency.
+And adjusted $\Delta \Delta \text{Ct}$ (Equation 2) can be calculated by incorporating the arguments with the prefix `pae_*` for percentile amplification efficiency.
 ```{r,eval=FALSE}
 # Adjusted method incorporating amplification efficiency
 calc_delta_delta_ct(ct_target_treatment = 32.5,
@@ -200,7 +199,7 @@ head(ddct_standard)
 6           1  2020-04-03    target_1       8.620370
 ```
 
-And the adjusted time-based $\Delta \Delta \text{Ct}$ calculation (Equation 4) can be calculated after using the `apply_amplification_efficiency()` function to get efficiency estimates from a standard curve data set. 
+The adjusted time-based $\Delta \Delta \text{Ct}$ calculation (Equation 4) can be calculated after using the `apply_amplification_efficiency()` function to get efficiency estimates from a standard curve data set. 
 
 ```{r, eval=FALSE}
 # Adjusted temporally-controlled method
